--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -3139,6 +3139,9 @@
     <Compile Include="scheduling\model\work_detail.cs">
       <DependentUpon>Scheduling.tt</DependentUpon>
     </Compile>
+    <Compile Include="scheduling\model\work_detail1.cs">
+      <DependentUpon>Scheduling.tt</DependentUpon>
+    </Compile>
     <Compile Include="scheduling\model\work_detail2.cs">
       <DependentUpon>Scheduling.tt</DependentUpon>
     </Compile>
