--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1782,9 +1782,23 @@
     <Content Include="scheduling\web\static\img\beijing3.jpeg" />
     <Content Include="scheduling\web\static\img\bk.jpeg" />
     <Content Include="scheduling\web\static\img\bk1.jpg" />
+    <Content Include="scheduling\web\static\img\close.png" />
     <Content Include="scheduling\web\static\img\image1.jpeg" />
     <Content Include="scheduling\web\static\img\image3.jpeg" />
     <Content Include="scheduling\web\static\img\image4.jpeg" />
+    <Content Include="scheduling\web\static\img\tubiao.jpg" />
+    <Content Include="scheduling\web\static\video\20220822_113414.mp4" />
+    <Content Include="scheduling\web\static\video\bom.mp4" />
+    <Content Include="scheduling\web\static\video\人员信息.mp4" />
+    <Content Include="scheduling\web\static\video\工作时间及休息日.mp4" />
+    <Content Include="scheduling\web\static\video\排产.mp4" />
+    <Content Include="scheduling\web\static\video\排产核对.mp4" />
+    <Content Include="scheduling\web\static\video\排班及排班明细.mp4" />
+    <Content Include="scheduling\web\static\video\模块单位.mp4" />
+    <Content Include="scheduling\web\static\video\汇总.mp4" />
+    <Content Include="scheduling\web\static\video\订单.mp4" />
+    <Content Include="scheduling\web\static\video\账号管理.mp4" />
+    <Content Include="scheduling\web\static\video\部门.mp4" />
     <Content Include="scheduling\web\zhuye.html" />
     <Content Include="scheduling\web\summary.html" />
     <Content Include="scheduling\web\time.html" />
