--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1752,6 +1752,7 @@
     <Content Include="Personnel\wuquanxian.aspx" />
     <Content Include="Personnel\yuangongdangan.aspx" />
     <Content Include="qi_chu.aspx" />
+    <Content Include="RDLC\sp_rc_ku_select_dayin.aspx" />
     <Content Include="RDLC\frm_ReportForm.aspx" />
     <Content Include="RDLC\gongzitiao_print.aspx" />
     <Content Include="ru_ku.aspx" />
@@ -3012,6 +3013,13 @@
     <Compile Include="qi_chu.aspx.designer.cs">
       <DependentUpon>qi_chu.aspx</DependentUpon>
     </Compile>
+    <Compile Include="RDLC\sp_rc_ku_select_dayin.aspx.cs">
+      <DependentUpon>sp_rc_ku_select_dayin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RDLC\sp_rc_ku_select_dayin.aspx.designer.cs">
+      <DependentUpon>sp_rc_ku_select_dayin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="RDLC\frm_ReportForm.aspx.cs">
       <DependentUpon>frm_ReportForm.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -3755,6 +3763,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="RDLC\Report3.rdlc" />
     <EmbeddedResource Include="RDLC\Report2.rdlc" />
     <EmbeddedResource Include="RDLC\Report1.rdlc" />
   </ItemGroup>
