--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1678,6 +1678,11 @@
     <Content Include="Personnel\bumenxiangqing.aspx" />
     <Content Include="Personnel\bumenxiangqing1.aspx" />
     <Content Include="Personnel\changepwd.aspx" />
+    <Content Include="Personnel\images\640x420.jpg" />
+    <Content Include="Personnel\images\caiwu_daohanglan.jpg" />
+    <Content Include="Personnel\images\renlitup.jpg" />
+    <Content Include="Personnel\images\tupian1.jpeg" />
+    <Content Include="Personnel\images\背景.jpeg" />
     <Content Include="Personnel\shenpi.aspx" />
     <Content Include="Personnel\css\common.css" />
     <Content Include="Personnel\css\gridview.css" />
@@ -1752,7 +1757,7 @@
     <Content Include="Personnel\wuquanxian.aspx" />
     <Content Include="Personnel\yuangongdangan.aspx" />
     <Content Include="qi_chu.aspx" />
-    <Content Include="RDLC\sp_rc_ku_select_dayin.aspx" />
+    <Content Include="RDLC\kh_ming_xi_selcet.aspx" />
     <Content Include="RDLC\frm_ReportForm.aspx" />
     <Content Include="RDLC\gongzitiao_print.aspx" />
     <Content Include="ru_ku.aspx" />
@@ -1780,6 +1785,7 @@
     <Content Include="scheduling\web\paiban.html" />
     <Content Include="scheduling\web\paibanbiao_renyuan.html" />
     <Content Include="scheduling\web\paiban_detail.html" />
+    <Content Include="scheduling\web\static\img\animat-diamond-color.gif" />
     <Content Include="scheduling\web\static\img\apic9216.jpg" />
     <Content Include="scheduling\web\static\img\background2.jpg" />
     <Content Include="scheduling\web\static\img\background.jpeg" />
@@ -1787,6 +1793,7 @@
     <Content Include="scheduling\web\static\img\beijing3.jpeg" />
     <Content Include="scheduling\web\static\img\bk.jpeg" />
     <Content Include="scheduling\web\static\img\bk1.jpg" />
+    <Content Include="scheduling\web\static\img\caiwu_daohanglan.jpg" />
     <Content Include="scheduling\web\static\img\close.png" />
     <Content Include="scheduling\web\static\img\image1.jpeg" />
     <Content Include="scheduling\web\static\img\image3.jpeg" />
@@ -3013,12 +3020,12 @@
     <Compile Include="qi_chu.aspx.designer.cs">
       <DependentUpon>qi_chu.aspx</DependentUpon>
     </Compile>
-    <Compile Include="RDLC\sp_rc_ku_select_dayin.aspx.cs">
-      <DependentUpon>sp_rc_ku_select_dayin.aspx</DependentUpon>
+    <Compile Include="RDLC\kh_ming_xi_selcet.aspx.cs">
+      <DependentUpon>kh_ming_xi_selcet.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="RDLC\sp_rc_ku_select_dayin.aspx.designer.cs">
-      <DependentUpon>sp_rc_ku_select_dayin.aspx</DependentUpon>
+    <Compile Include="RDLC\kh_ming_xi_selcet.aspx.designer.cs">
+      <DependentUpon>kh_ming_xi_selcet.aspx</DependentUpon>
     </Compile>
     <Compile Include="RDLC\frm_ReportForm.aspx.cs">
       <DependentUpon>frm_ReportForm.aspx</DependentUpon>
