--- a/Web/Web.config
+++ b/Web/Web.config
@@ -188,4 +188,24 @@
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  
+  <system.web>
+    <httpRuntime maxRequestLength="2147483647" executionTimeout="3600" />
+  </system.web>
+  
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="2147483644" recursionLimit="100"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
+  
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2147483647" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
 </configuration>
