--- a/Web/Web.config
+++ b/Web/Web.config
@@ -76,6 +76,13 @@
     <add name="FinanceEntities" connectionString="metadata=res://*/finance.model.Finance.csdl|res://*/finance.model.Finance.ssdl|res://*/finance.model.Finance.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=Finance;persist security info=True;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="yh_noticeEntities" connectionString="metadata=res://*/PushNews.csdl|res://*/PushNews.ssdl|res://*/PushNews.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_notice;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="yh_noticeEntities1" connectionString="metadata=res://*/Pushnews.model.PushNews.csdl|res://*/Pushnews.model.PushNews.ssdl|res://*/Pushnews.model.PushNews.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_notice;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="yh_jinxiaocun_excelEntities" connectionString="metadata=res://*/JxcServer.JxcServer.csdl|res://*/JxcServer.JxcServer.ssdl|res://*/JxcServer.JxcServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_jinxiaocun_excel;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="yh_jinxiaocun_excelEntities1" connectionString="metadata=res://*/JxcServer.JxcServer.csdl|res://*/JxcServer.JxcServer.ssdl|res://*/JxcServer.JxcServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_jinxiaocun_excel;user id=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="yh_jinxiaocun_excelEntities2" connectionString="metadata=res://*/JxcServer.JxcServer.csdl|res://*/JxcServer.JxcServer.ssdl|res://*/JxcServer.JxcServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_jinxiaocun_excel;user id=sa;password=Lyh07910_001;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="yh_jinxiaocun_excelEntities3" connectionString="metadata=res://*/JxcServer.JxcServer.csdl|res://*/JxcServer.JxcServer.ssdl|res://*/JxcServer.JxcServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_jinxiaocun_excel;user id=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="yh_jinxiaocun_excelEntities3"
+     connectionString="metadata=res://*/JxcServer.JxcServer.csdl|res://*/JxcServer.JxcServer.ssdl|res://*/JxcServer.JxcServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=yhocn.cn;initial catalog=yh_jinxiaocun_excel;user id=sa;password=Lyh07910_001;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+     providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="服务器_jxc" value="server=yhocn.cn;port=3306;user=root;password=Lyh07910;database=YH_jinxiaocun_PC;Convert Zero Datetime=True;Allow Zero Datetime=True;default command timeout=10;Connection Timeout=600" />
@@ -188,19 +195,16 @@
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
-  
   <system.web>
     <httpRuntime maxRequestLength="2147483647" executionTimeout="3600" />
   </system.web>
-  
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="2147483644" recursionLimit="100"/>
+        <jsonSerialization maxJsonLength="2147483644" recursionLimit="100" />
       </webServices>
     </scripting>
   </system.web.extensions>
-  
   <system.webServer>
     <security>
       <requestFiltering>
